[package]
name = "dcs"
description = "Soon to be a simple Distributed Control System implementation"
license = "MIT"
version = "0.1.0"
authors = ["kolektiv <andrew@xyncro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
