[package]
name = "dcs"
description = "Soon to be a simple Distributed Control System implementation"
license = "MIT"
version = "0.1.0"
authors = ["kolektiv <andrew@xyncro.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.2", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
